src/snapshots/lp_parser_rs__lp_problem__test__small_input.snap
---
source: src/lp_problem.rs
expression: "&problem"
---
name: "Problem name: diet"
sense: Minimize
objectives:
  obj1:
    name: obj1
    coefficients:
      - var_name: x
        coefficient: -0.5
      - var_name: y
        coefficient: -2
      - var_name: z
        coefficient: -8
  obj2:
    name: obj2
    coefficients:
      - var_name: y
        coefficient: 1
      - var_name: x
        coefficient: 1
      - var_name: z
        coefficient: 1
  obj3:
    name: obj3
    coefficients:
      - var_name: z
        coefficient: 10
      - var_name: x
        coefficient: -2.5
      - var_name: y
        coefficient: 1
constraints:
  c1:
    type: Standard
    name: c1
    coefficients:
      - var_name: x1
        coefficient: 3
      - var_name: x2
        coefficient: 1
      - var_name: x3
        coefficient: 2
    operator: EQ
    rhs: 30
  c2:
    type: Standard
    name: c2
    coefficients:
      - var_name: x1
        coefficient: 2
      - var_name: x2
        coefficient: 1
      - var_name: x3
        coefficient: 3
      - var_name: x4
        coefficient: 1
    operator: GTE
    rhs: 15
  c3:
    type: Standard
    name: c3
    coefficients:
      - var_name: x2
        coefficient: 2
      - var_name: x4
        coefficient: 3
    operator: LTE
    rhs: 25
variables:
  x:
    name: x
    var_type: Free
  x1:
    name: x1
    var_type: Free
  x2:
    name: x2
    var_type:
      LowerBound: 1
  x2dfsdf:
    name: x2dfsdf
    var_type:
      DoubleBound:
        - 100
        - -1
  x3:
    name: x3
    var_type: Free
  x4:
    name: x4
    var_type: Free
  y:
    name: y
    var_type: Free
  z:
    name: z
    var_type: Free
